--- a/cross-examples/mingw.ini
+++ b/cross-examples/mingw.ini
@@ -4,8 +4,19 @@ prefix = 'x86_64-w64-mingw32'
 [binaries]
 c = prefix + '-gcc'
 cpp = prefix + '-g++'
-strip = prefix + '-strip'
+strip ='strip'
 windres = prefix + '-windres'
+exe_wrapper = 'wine64'
+
+[built-in options]
+c_args = ['-O3','-Os','-mwindows','-funroll-loops']
+#c_link_args = [ '-static-libstdc++','-static-libgcc','-lpthread']
+c_link_args=['-static']
+#c_link_args=['-static','-Wl,-Bstatic','-lstdc++','-lgcc_eh','-lpthread','-Wl,-Bdynamic']
+cpp_args = c_args
+#cpp_link_args=['-static','-Wl,-Bstatic','-lstdc++','-lgcc_eh','-lpthread','-Wl,-Bdynamic']
+cpp_link_args=['-static']
+#cpp_link_args = ['-static-libstdc++','-static-libgcc','-lpthread']
 
 [host_machine]
 system = 'windows'
